fixed some alignment issues

--- a/styles/style.css
+++ b/styles/style.css
@@ -23,7 +23,7 @@ header {
 main,
 .footerContainer,
 hr {
-    max-width: 1100px;
+    max-width: 1200px;
     margin: 0 auto;
 }
 
@@ -32,8 +32,7 @@ nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding-top: 60px;
-    padding-bottom: 20px;
+    padding: 60px 50px 20px;
 }
 
 .logo>h1 {
@@ -47,7 +46,7 @@ nav {
     display: flex;
     justify-content: space-around;
     align-items: center;
-    gap: 50px;
+    gap: 25px;
 }
 
 .menu>li {
@@ -83,7 +82,7 @@ nav {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding-top: 30px;
+    padding: 30px 50px 0;
 }
 
 .heroTextContainer {
@@ -308,12 +307,12 @@ nav {
 /* Trainings and Exercises section Design */
 #training {
     padding: 0 20px;
+    margin: 100px 0 0;
 }
 
 #training>.globalHeading {
     text-align: left;
     width: 65%;
-    margin: 100px 0 0;
 }
 
 .trainingGallery {
@@ -327,7 +326,7 @@ nav {
 
 .trainingImage {
     overflow: hidden;
-    height: 170px;
+    height: 200px;
     position: relative;
 
 }
@@ -406,6 +405,7 @@ nav {
     grid-template-columns: repeat(2, 1fr);
     justify-content: space-around;
     gap: 50px;
+    border-radius: 18px;
     padding: 50px 100px;
     margin-top: 80px;
 }
@@ -611,6 +611,7 @@ footer {
 .footerMenu>ul>li>a:hover {
     color: var(--primaryColor);
 }
+
 hr {
     border: 2px solid rgba(255, 255, 255, 0.10);
 }
@@ -618,6 +619,7 @@ hr {
 .creditFooter {
     padding: 25px 15px;
 }
+
 .creditFooter>p {
     color: var(--secondaryWhite);
     text-align: center;
@@ -676,14 +678,16 @@ hr {
     .menu {
         gap: 10px;
     }
-
+    .menu>li {
+        padding: 8px 16px;
+    }
     .menu>li>a {
-        font-size: 16px;
+        font-size: 17px;
     }
 
     #hero {
         flex-direction: column;
-        padding-top: 0;
+        padding: 0;
     }
 
     .heroTextContainer,
@@ -692,7 +696,7 @@ hr {
     }
 
     .heroTextContainer {
-        padding: 75px 90px 100px;
+        padding: 75px 50px 100px;
     }
 
     .heroImgDetails-1 {
@@ -737,9 +741,13 @@ hr {
         grid-template-columns: 1fr;
         row-gap: 100px;
     }
-    .bmiChart>h3, .bmiCalculatorBox>h3, .bmiCalculatorBox>p {
+
+    .bmiChart>h3,
+    .bmiCalculatorBox>h3,
+    .bmiCalculatorBox>p {
         text-align: center;
     }
+
     .bmiTable {
         margin: 50px auto 0;
     }
@@ -747,6 +755,7 @@ hr {
     .inputBox label {
         padding: 12px 15px 12px 0;
     }
+
     .bmiCalculator>.bmiBtn {
         grid-column: span 2;
         text-align: center;
@@ -755,17 +764,21 @@ hr {
     .teamContainer {
         grid-template-columns: repeat(2, 1fr);
     }
+
     .footerContainer {
-        grid-template-columns: repeat(2,1fr);
-        grid-template-rows: repeat(2,1fr);
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(2, 1fr);
         gap: 0px;
     }
+
     #footer1 {
         grid-column: span 2;
     }
+
     .footerLogo>p {
         max-width: 450px;
     }
+
     .creditFooter>p {
         font-size: 14px;
     }
@@ -846,20 +859,43 @@ hr {
         font-size: 32px;
     }
 
+    #habits {
+        margin-top: 50px;
+    }
+
     .habitsCardContainer {
         grid-template-columns: 230px;
         width: 90%;
     }
 
     #run {
+        margin: 70px 10px 0;
         flex-direction: column;
         gap: 30px;
         padding: 30px;
     }
 
+    .runContent>h2,
+    .runContent>p {
+        text-align: center;
+    }
+
     .runImg>img {
-        width: 310px;
+        width: 340px;
         height: 170px;
+    }
+
+    #training {
+        margin: 70px 0 0;
+        padding: 0 10px;
+    }
+
+    #training>.globalHeading {
+        text-align: center;
+    }
+
+    #training>.globalHeading>h2 {
+        font-size: 26px;
     }
 
     .trainingGallery {
@@ -879,8 +915,14 @@ hr {
         display: none;
     }
 
+    #bmi {
+        margin-top: 50px;
+    }
+
     .bmiContainer {
         padding: 30px 20px;
+        margin: 50px 10px 0;
+        row-gap: 80px;
     }
 
     .inputBox select {
@@ -890,24 +932,35 @@ hr {
     .inputBoxFull select {
         width: 96%;
     }
-
+    #team {
+        margin-top: 70px;
+    }
     .teamContainer {
         grid-template-columns: 1fr;
+        margin: 60px 10px 0;
     }
+
     .footerContainer {
         grid-template-columns: 1fr;
         row-gap: 30px;
         column-gap: 0;
+        padding: 40px 30px;
     }
+
     #footer1 {
         grid-column: span 1;
     }
+
     .footerLogo>p {
         max-width: unset;
     }
+
     .footerMenu>h4 {
         font-size: 26px;
         margin-bottom: 25px;
     }
-    
+    .creditFooter {
+        padding: 15px;
+    }
+
 }
